test_regress/t/t_case_enum_incomplete_bad.out
%Warning-CASEINCOMPLETE: t/t_case_enum_incomplete_bad.v:18:12: Enum item 'S1' not covered by case
   18 |     unique case (state)
      |            ^~~~
                         ... For warning description see https://verilator.org/warn/CASEINCOMPLETE?v=latest
                         ... Use "/* verilator lint_off CASEINCOMPLETE */" and lint_on around source to disable this message.
%Error: Exiting due to
